[project]
name = "rainforest-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Rainforest Cheng",email = "contact@rainforest.tools"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.115.8,<0.116.0)"
]

[tool.poetry]
packages = [{include = "rainforest_ai", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
