[project]
name = "rainforest-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-core>=0.4.7",
    "autogen-ext[openai,semantic-kernel-ollama]>=0.4.7",
    "fastapi[all]>=0.115.8",
]

[dependency-groups]
dev = [
    "autogenstudio>=0.4.1.8",
]
